--- a/code/ted_talks.ipynb
+++ b/code/ted_talks.ipynb
@@ -3,6 +3,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "state": "",
         "id": "04JvUqTA5Fai"
       },
       "source": [
